--- a/themes/Academia/_config.yml
+++ b/themes/Academia/_config.yml
@@ -17,6 +17,7 @@ menu:
   Computer Science Projects: /Projects/
   Data Science Projects: /DSProjects/
   Spcial Data Science: /SSCI/
+  Extracurricular Activity: /ExtracurricularActivity
 # flink picture will load if avator link calls on error
 loading_bg:
   flink: /img/cloud_ai.png
