--- a/themes/Academia/_config.yml
+++ b/themes/Academia/_config.yml
@@ -3,7 +3,7 @@
 avatar: /img/profie.jpg
 # if author sets in hexo_config, this string doesn't work
 author: 'Zeyu Li'
-author_bio: 'I am a Mater Student in Spatial Data Science at the University of Southern California. My under graduate major is Software Engineering. I have solid software engineer with exceptional programming, analytical and mathematical skills. High
+author_bio: 'I am currently seeking internship opportunities starting in May 2024, or full-time positions commencing in December 2024. I am a Mater Student in Spatial Data Science at the University of Southern California. My under graduate major is Software Engineering. I have solid software engineer with exceptional programming, analytical and mathematical skills. High
 proficiency in Android and iOS mobile development, and web development using Java, Go, React, Spring, Hibernate, Vue, MongoDB and Firebase. '
 
 since: 2023
